fix: select-search-box broken style

--- a/components/select/style/index.less
+++ b/components/select/style/index.less
@@ -109,7 +109,7 @@
     }
   }
 
-  &-no-arrow &-selection-selected-value {
+  &-selection-selected-value {
     padding-right: 0;
   }
 
@@ -150,6 +150,14 @@
 
     .@{select-prefix-cls}-selection__rendered {
       margin-right: 24px;
+    }
+  }
+
+  &-no-arrow {
+    padding-right: 0;
+
+    .@{select-prefix-cls}-selection__rendered {
+      margin-right: 11px;
     }
   }
 
